--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 		<repository>
 			<id>anypoint-exchange-v3</id>
 			<name>Anypoint Exchange</name>
-			<url>https://maven.anypoint.mulesoft.com/api/v3/organizations/10f610c1-3303-4b7e-af82-600a570589c0/maven</url>
+			<url>https://maven.anypoint.mulesoft.com/api/v3/maven</url>
 			<layout>default</layout>
 		</repository>
 		<!-- <repository>
