--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 						<muleVersion>4.4.0</muleVersion>
 						<uri>https://anypoint.mulesoft.com</uri>
                                                 <target>server</target>
-                                                <applicationName>sf-sapi-vijaya</applicationName>
+                                                <applicationName>sf-sapi-vijaya1</applicationName>
 						<targetType>server</targetType>
                                                  <username>vijayalakshmi_28122023</username>
                                                  <password>Prasad@333</password>
