--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
+			<groupId>10f610c1-3303-4b7e-af82-600a570589c0</groupId>
+			<artifactId>ic-sfdc-contracts-sapi</artifactId>
+			<version>1.0.0</version>
+			<classifier>raml</classifier>
+			<type>zip</type>
+		</dependency>
+		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-sockets-connector</artifactId>
 			<version>1.2.3</version>
